updated create-account modal (disabled null and similar names)

--- a/src/app/features/admin-layout/a-user-management/a-user-management.component.html
+++ b/src/app/features/admin-layout/a-user-management/a-user-management.component.html
@@ -218,10 +218,10 @@
   </section>
 
   <!-- Create/Edit Account Modal -->
-  <app-create-account-modal
-    *ngIf="showModal"
-    [editingUser]="selectedUser"
-    (close)="closeModal()"
-    (accountCreated)="onAccountCreated($event)"
-  >
+<app-create-account-modal
+  *ngIf="showModal"
+  [editingUser]="selectedUser"
+  [existingUsers]="users"
+  (close)="closeModal()"
+  (accountCreated)="onAccountCreated($event)">
 </app-create-account-modal>
