admin create account

--- a/src/app/features/admin-layout/a-user-management/create-account-modal/create-account-modal.component.html
+++ b/src/app/features/admin-layout/a-user-management/create-account-modal/create-account-modal.component.html
@@ -4,25 +4,16 @@
 
     <form (ngSubmit)="submitForm()">
       <div class="mb-4">
-        <label for="username" class="block mb-1">Username:</label>
-        <input
-          type="text"
-          id="username"
-          [(ngModel)]="username"
-          name="username"
+        <label for="type" class="block mb-1">Type:</label>
+        <select
+          id="type"
+          [(ngModel)]="type"
+          (change)="onTypeChange()"
+          name="type"
           class="w-full px-3 py-2 border rounded"
-        />
-      </div>
-
-      <div class="mb-4">
-        <label for="fullName" class="block mb-1">Full Name:</label>
-        <input
-          type="text"
-          id="fullName"
-          [(ngModel)]="fullName"
-          name="fullName"
-          class="w-full px-3 py-2 border rounded"
-        />
+        >
+          <option *ngFor="let t of types" [value]="t">{{t}}</option>
+        </select>
       </div>
 
       <div class="mb-4">
@@ -37,42 +28,62 @@
         </select>
       </div>
 
-      <div class="mb-4">
-        <label for="type" class="block mb-1">Type:</label>
-        <select
-          id="type"
-          [(ngModel)]="type"
-          name="type"
-          class="w-full px-3 py-2 border rounded"
-        >
-          <option *ngFor="let t of types" [value]="t">{{t}}</option>
-        </select>
-      </div>
-
       <div *ngIf="isKiosk()" class="mb-4">
-        <label for="password" class="block mb-1">Password:</label>
+        <label for="code" class="block mb-1">Random Code:</label>
         <div class="flex items-center space-x-2">
           <input
-            [type]="passwordVisible ? 'text' : 'password'"
-            id="password"
-            [(ngModel)]="password"
-            name="password"
+            type="text"
+            id="code"
+            [value]="randomCode"
+            [disabled]="true"
             class="w-full px-3 py-2 border rounded"
           />
-          <button type="button" (click)="togglePasswordVisibility()" class="p-2">
-            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 24 24" fill="currentColor">
-              <path *ngIf="!passwordVisible" d="M12 4.5c-5.37 0-9.86 4.485-10.458 5.414a1 1 0 000 1.172C2.14 10.015 6.63 14.5 12 14.5c5.37 0 9.86-4.485 10.458-5.414a1 1 0 000-1.172C21.86 8.985 17.37 4.5 12 4.5zM12 12a2 2 0 110-4 2 2 0 010 4z"></path>
-              <path *ngIf="passwordVisible" d="M12 3.093l6.693 3.846a1 1 0 01.564.905v7.692a1 1 0 01-.564.905L12 20.907a1 1 0 01-1.087 0L4.22 15.537a1 1 0 01-.564-.905V7.94a1 1 0 01.564-.905L11 3.093a1 1 0 011.087 0zM12 5.827l-5.519 3.192v6.162l5.519 3.191 5.519-3.191V9.019L12 5.827z"></path>
-            </svg>
+          <button type="button" (click)="generateRandomCode()" class="p-2">
+            Regenerate Code
           </button>
-          <button type="button" (click)="generateRandomPassword()" class="p-2">
-            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 24 24" fill="currentColor">
-              <path d="M12 3.093l6.693 3.846a1 1 0 01.564.905v7.692a1 1 0 01-.564.905L12 20.907a1 1 0 01-1.087 0L4.22 15.537a1 1 0 01-.564-.905V7.94a1 1 0 01.564-.905L11 3.093a1 1 0 011.087 0zM12 5.827l-5.519 3.192v6.162l5.519 3.191 5.519-3.191V9.019L12 5.827z"></path>
-              <circle cx="8" cy="8" r="1"></circle>
-              <circle cx="12" cy="12" r="1"></circle>
-              <circle cx="16" cy="16" r="1"></circle>
-            </svg>
-          </button>
+        </div>
+      </div>
+
+      <div *ngIf="!isKiosk()">
+        <div class="mb-4">
+          <label for="username" class="block mb-1">Username:</label>
+          <input
+            type="text"
+            id="username"
+            [(ngModel)]="username"
+            name="username"
+            class="w-full px-3 py-2 border rounded"
+          />
+        </div>
+
+        <div class="mb-4">
+          <label for="fullName" class="block mb-1">Full Name:</label>
+          <input
+            type="text"
+            id="fullName"
+            [(ngModel)]="fullName"
+            name="fullName"
+            class="w-full px-3 py-2 border rounded"
+          />
+        </div>
+
+        <div class="mb-4">
+          <label for="password" class="block mb-1">Password:</label>
+          <div class="flex items-center space-x-2">
+            <input
+              [type]="passwordVisible ? 'text' : 'password'"
+              id="password"
+              [(ngModel)]="password"
+              name="password"
+              class="w-full px-3 py-2 border rounded"
+            />
+            <button type="button" (click)="togglePasswordVisibility()" class="p-2">
+              <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 24 24" fill="currentColor">
+                <path *ngIf="!passwordVisible" d="M12 4.5c-5.37 0-9.86 4.485-10.458 5.414a1 1 0 000 1.172C2.14 10.015 6.63 14.5 12 14.5c5.37 0 9.86-4.485 10.458-5.414a1 1 0 000-1.172C21.86 8.985 17.37 4.5 12 4.5zM12 12a2 2 0 110-4 2 2 0 010 4z"></path>
+                <path *ngIf="passwordVisible" d="M12 3.093l6.693 3.846a1 1 0 01.564.905v7.692a1 1 0 01-.564.905L12 20.907a1 1 0 01-1.087 0L4.22 15.537a1 1 0 01-.564-.905V7.94a1 1 0 01.564-.905L11 3.093a1 1 0 011.087 0zM12 5.827l-5.519 3.192v6.162l5.519 3.191 5.519-3.191V9.019L12 5.827z"></path>
+              </svg>
+            </button>
+          </div>
         </div>
       </div>
 
