--- a/src/app/features/admin-layout/a-kiosk-management/a-kiosk-management.component.html
+++ b/src/app/features/admin-layout/a-kiosk-management/a-kiosk-management.component.html
@@ -6,7 +6,7 @@
         <!-- Animated Terminal Indicator -->
         <div class="flex items-center bg-[#283c1c] bg-opacity-20 rounded-full px-4 py-2 transform hover:scale-105 transition-all duration-300">
           <span class="text-lg font-medium text-[#283c1c]">
-            {{ getTotalCounters() }}/{{ maxCounters }}
+            {{ getTotalCounters() }}/{{ getMaxCountersForActiveTab() }}
           </span>
           <svg class="w-6 h-6 ml-2 text-[#283c1c]" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
             <path strokeLinecap="round" strokeLinejoin="round" strokeWidth="2" d="M9 3v2m6-2v2M9 19v2m6-2v2M5 9H3m2 6H3m18-6h-2m2 6h-2M7 19h10a2 2 0 002-2V7a2 2 0 00-2-2H7a2 2 0 00-2 2v10a2 2 0 002 2zM9 9h6v6H9V9z" />
@@ -84,11 +84,11 @@
       </div>
 
       <div 
-        *ngIf="getTotalCounters() >= maxCounters" 
+        *ngIf="getTotalCounters() >= getMaxCountersForActiveTab()" 
         class="mt-6 p-4 bg-yellow-50 border-l-4 border-yellow-400 text-yellow-800 rounded-r-xl animate-pulse"
       >
         <p class="font-medium text-lg">Maximum Capacity Reached</p>
-        <p class="mt-2">You've reached the maximum of {{ maxCounters }} terminals. Please delete a terminal to add a new one.</p>
+        <p class="mt-2">You've reached the maximum of {{ getMaxCountersForActiveTab() }} terminals for the {{ activeTab }} tab. Please delete a terminal to add a new one.</p>
       </div>
     </div>
   </section>
@@ -102,9 +102,12 @@
     <input 
       type="text" 
       [(ngModel)]="codeInput" 
-      placeholder="Enter code" 
-      class="border border-gray-300 p-2 rounded-lg w-full mb-4"
+      placeholder="Enter 6-digit code" 
+      class="border border-gray-300 p-2 rounded-lg w-full mb-2"
     />
+
+    <!-- Error message for invalid code input -->
+    <p *ngIf="codeInputError" class="text-red-500 text-sm mb-2">{{ codeInputError }}</p>
     
     <!-- Button container with improved layout -->
     <div class="mt-4 flex justify-end space-x-2">
@@ -133,6 +136,7 @@
     </div>
   </div>
 </div>
+
 
 <!-- Confirmation Modal for Unassigning Code -->
 <div *ngIf="showUnassignCodeDialog" class="fixed inset-0 flex items-center justify-center bg-black bg-opacity-50">
