--- a/src/app/shared/da-sidebar/da-sidebar.component.html
+++ b/src/app/shared/da-sidebar/da-sidebar.component.html
@@ -81,8 +81,8 @@
 
   <!-- Logout Button -->
   <div class="p-4">
-    <button
-      (click)="logout()"
+    <uswagon-logout-button
+
       class="w-full py-2 px-3 bg-[#2F4A2C] text-white font-bold rounded-lg transition-all duration-500 ease-in-out hover:bg-[#1F3419] flex items-center justify-center"
     >
       <span class="material-icons" [ngClass]="{ 'mr-2': isExpanded }">
@@ -97,6 +97,6 @@
       >
         Logout
       </span>
-    </button>
+    </uswagon-logout-button>
   </div>
 </div>
