--- a/src/app/features/admin-layout/admin-layout.component.html
+++ b/src/app/features/admin-layout/admin-layout.component.html
@@ -2,8 +2,11 @@
   <!-- Sidebar -->
   <app-sidebar></app-sidebar>
 
+  
   <!-- Main Content -->
   <div class="flex-1 overflow-auto bg-gray-100">
+    <app-header > </app-header>
+
     <router-outlet></router-outlet>
   </div>
 </div>
