--- a/src/app/features/queueing-layout/queue-display/queue-display.component.css
+++ b/src/app/features/queueing-layout/queue-display/queue-display.component.css
@@ -1,19 +1,20 @@
-.marquee {
-    width: 100%;
-    overflow: hidden;
-    position: relative;
+.queue-display {
+  position: relative;
+  width: 100%;
+  height: 100vh; /* Full viewport height */
+  background-image: url('/assets/queue-display/background.png'); /* Path to your image */
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+
+  .overlay-text {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    color: #fff;
+    font-size: 1.2rem;
+    font-weight: bold;
+    background-color: rgba(0, 0, 0, 0.5); /* Slight background to make text more readable */
+    padding: 10px;
   }
-  
-  .marquee-text {
-    display: inline-block;
-    white-space: nowrap;
-    padding-left: 100%;
-    animation: marquee 10s linear infinite;
-  }
-  
-  @keyframes marquee {
-    0% { transform: translateX(0); }
-    100% { transform: translateX(-100%); }
-  }
-  
-  
+}
